--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/bottom-tabs": "^7.0.7",
     "@react-navigation/native": "^7.0.4",
     "@react-navigation/native-stack": "^7.1.14",
+    "axios": "^1.7.9",
     "expo": "~52.0.14",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
