--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
     "@expo/vector-icons": "^14.0.2",
+    "@google/generative-ai": "^0.21.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "^2.9.0",
+    "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/bottom-tabs": "^7.0.7",
     "@react-navigation/native": "^7.0.4",
     "@react-navigation/native-stack": "^7.1.14",
@@ -27,6 +28,7 @@
     "expo": "~52.0.14",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
+    "expo-image-picker": "~16.0.3",
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.11",
