--- a/app.json
+++ b/app.json
@@ -8,6 +8,7 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
+      "image": "./assets/images/expo.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -16,8 +17,10 @@
     },
     "android": {
       "adaptiveIcon": {
+        "foregroundImage": "./assets/images/expo.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.jaiane.DefensoriaPE"
     },
     "web": {
       "bundler": "metro",
@@ -30,6 +33,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "b809ecbe-b700-4e07-a0e9-db996ed5a12b"
+      }
     }
   }
 }
